text sangraha - refactoring 2
